load("//bazel:mongo_src_rules.bzl", "symlink")

package(default_visibility = ["//visibility:public"])

exports_files([
    "lsan.suppressions",
    "tsan.suppressions",
])

# This is a hack to work around the fact that the cc_library flag additional_compiler_inputs doesn't
# exist in cc_binary. Instead, we add the denylists to srcs as header files to make them visible to
# the compiler executable.
filegroup(
    name = "asan_denylist_h",
    srcs = ["asan.denylist"],
)

filegroup(
    name = "msan_denylist_h",
    srcs = ["msan.denylist"],
)

filegroup(
    name = "tsan_denylist_h",
    srcs = ["tsan.denylist"],
)

filegroup(
    name = "ubsan_denylist_h",
    srcs = ["ubsan.denylist"],
)

filegroup(
    name = "mac_plist",
    srcs = ["macos_mongodb.plist"],
)
